[package]
name = "grok-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"
futures-util = "0.3"
dotenvy = "0.15"
anyhow = "1"

